# mykrobe-atlas-kmersearch-api

./: .gitignore  Makefile  README.md  cloudbuild.yaml  docker_run.sh
specs/: openapi.yaml
src/: .openapi-generator-ignore  Dockerfile  rename_samples.py  requirements.txt  server.py  setup.cfg  setup.py  test-requirements.txt  test.Dockerfile  tests.Dockerfile
src/.openapi-generator/: FILES
src/api/: build.py  search.py
src/commands/: amino_acid_mutation_search.py  build.py  query.py  rename_samples.py  variant_search.py
src/openapi_server/: __main__.py  db.py  error_handlers.py
src/openapi_server/controllers/: build_controller.py  search_controller.py  variant_search_controller.py
src/openapi_server/factories/: app.py
src/openapi_server/models/: __init__.py  new_samples.py  sample.py  samples.py  search_query.py  search_result.py  search_results.py  variant_search_query.py  variant_search_result.py  variant_search_results.py
src/openapi_server/openapi/: openapi.yaml
src/openapi_server/test/: conftest.py  strategies.py  test_search_controller.py
src/openapi_server/test/wrappers/: test_variant_search.py
src/test/: conftest.py  strategies.py  test_search_controller.py
src/test/openapi_server/: test_build_controller.py  test_search_controller.py  test_variant_search.py  test_variant_search_controller.py
src/test/wrappers/: test_amino_acid_mutation_search.py  test_cobs.py
src/utils/: file.py
src/wrappers/: amino_acid_mutation_search.py  cobs.py  variant_search.py
