[metadata]
name = kmersearch-api
version = 0.0.1

[options]
packages = find:

[options.entry_points]
console_scripts =
    build = commands.build:main
    query = commands.query:main
    variant_search = commands.variant_search:main
    amino_acid_mutation_search = commands.amino_acid_mutation_search:main
    rename_samples = commands.rename_samples:main